fix version mobile

--- a/assets/sass/_mediaqueries.scss
+++ b/assets/sass/_mediaqueries.scss
@@ -1,3 +1,26 @@
+@media only screen 
+    and (max-device-width: 640px), 
+    only screen and (max-device-width: 667px), 
+    only screen and (max-width: 480px)
+{
+	.carousel-inner {
+		height: 100vh;
+		top: 50%;
+	}
+	.carousel-inner .carousel-item img {
+		 margin-top: 0px!important; 
+	}
+	.carousel-inner {
+		height: 500px;
+	}
+	.carousel-inner {
+		position: relative;
+		width: 100%;
+		/* overflow: hidden; 
+		margin-top: 50%;*/
+	}
+}
+
 @media only screen and (max-width:768px) {
 	.carousel-inner {
 	    height: 30vh;
@@ -17,4 +40,16 @@
 			display: none;
 		}
 	}
+	.carousel-inner .carousel-item .carousel-caption {
+		right: 5% !important;
+		bottom: 5% !important;
+		left: 9% !important;
+		h5{
+			font-size: 3vh;
+		}
+		p{
+			font-size: 2vh;
+		}
+	}
 }
+
